--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_database: ^10.0.6
   device_info_plus: ^8.0.0
   google_sign_in: ^5.4.2
+  firebase_messaging: ^14.1.3
+  flutter_local_notifications: ^12.0.4
 
 dev_dependencies:
   flutter_test:
